[Refactor]: 프로젝트 참여자 조회 기능 중 ResponseDTO 구조 변경